part1.tf
resource "aws_vpc" "test_vpc" {
  cidr_block = var.vpc_cidr

  tags = {
    Name = var.vpc_name
  }
}

variable "az_number" {
  type = list(string)
  default = [
    "a",
    "b",
    "c"
  ]
}

# resource "aws_subnet" "test_subnet" {
#   count             = "3"
#   vpc_id            = aws_vpc.test_vpc.id
#   cidr_block        = var.subnet_cidr_range
#   availability_zone = "1a"

#   tags = {
#     Name = var.vpc_name
#   }
# }

resource "aws_subnet" "public_subnet" {
  count             = 3
  cidr_block        = "10.0.${count.index}.0/24"
  vpc_id            = aws_vpc.test_vpc.id
  availability_zone  = "ap-southeast-2${var.az_number[count.index]}"
  map_public_ip_on_launch = true
}

resource "aws_subnet" "private_subnet" {
  count             = 3
  cidr_block        = "10.0.${count.index + 10}.0/24"
  vpc_id            = aws_vpc.test_vpc.id
  availability_zone = "ap-southeast-2${var.az_number[count.index]}" 
}

resource "aws_internet_gateway" "internetgateway" {
  vpc_id = aws_vpc.test_vpc.id

  tags = {
    Name = "Test vpc Internet Gateway"
  }
}

resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.test_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.internetgateway.id
  }

  route {
    ipv6_cidr_block = "::/0"
    gateway_id      = aws_internet_gateway.internetgateway.id
  }

  tags = {
    Name = "Public Route Table"
  }
}

resource "aws_route_table_association" "public_1_rt_a" {
  subnet_id      = aws_subnet.public_subnet[0].id
  route_table_id = aws_route_table.public_rt.id
}


resource "aws_security_group" "web_sg" {
  name   = "HTTP and SSH"
  vpc_id = aws_vpc.test_vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "web_instance" {
  ami           = var.ami_image
  instance_type = var.ec2_size
  key_name      = var.private_key_pair_name

  subnet_id                   = aws_subnet.public_subnet[0].id
  vpc_security_group_ids      = [aws_security_group.web_sg.id]
  associate_public_ip_address = true

  user_data = <<-EOF
  #!/bin/bash -ex

  sudo apt install nginx-core
  echo "<h1>Hello World</h1>" >  /usr/share/nginx/html/index.html 
  systemctl enable nginx
  systemctl start nginx
  EOF

  tags = {
    "Name" : "Hello World"
  }
}
